<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:gravity="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/ed_poptnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_of_the_test"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ed_poptdes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_some_description"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_no_of_questions" />

        <EditText
            android:id="@+id/ed_popqno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />
</LinearLayout>